--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
         // Firebase SDK
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
         import { getAuth, signInWithPopup, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js";
-        import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js";
+        import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js";
 
         // Firebase 配置
         const firebaseConfig = {
@@ -34,7 +34,7 @@
                     const user = result.user;
                     console.log("✅ 登录成功:", user);
 
-                    // 检查 Firestore 是否有该用户的数据
+                    // 获取 Firestore 用户数据
                     const userRef = doc(db, "users", user.uid);
                     console.log("📡 正在查询 Firestore 数据...");
                     const userSnap = await getDoc(userRef);
@@ -43,16 +43,28 @@
                         const userData = userSnap.data();
                         console.log("🔍 Firestore 数据:", userData);
 
-if ("role" in userData) {
-    if (userData.role === "1") {  // 把 `1` 改成 `"1"` 进行字符串比较
-        console.log("🎉 卖家身份，跳转到 seller.html");
-        window.location.href = "seller.html";  // 跳转到卖家平台
-    } else {
-        console.log("🚀 普通用户，跳转到 home.html");
-        window.location.href = "home.html";  // 跳转到普通用户页面
-    }
-}
+                        // **检查 role 是否存在**
+                        const role = userData.role ? String(userData.role) : "0";
+                        console.log(`🎭 角色: ${role}`);
 
+                        if (role === "1") {
+                            console.log("🎉 卖家身份，跳转到 seller.html");
+                            window.location.href = "seller.html"; // 卖家跳转
+                        } else {
+                            console.log("🚀 普通用户，跳转到 home.html");
+                            window.location.href = "home.html"; // 普通用户跳转
+                        }
+                    } else {
+                        console.warn("⚠️ Firestore 没有找到用户文档，跳转到 register.html...");
+                        await setDoc(userRef, {
+                            name: user.displayName,
+                            email: user.email,
+                            role: "0", // 默认普通用户
+                            address: "",
+                            phone: ""
+                        });
+                        window.location.href = "register.html"; // 新用户跳转到注册页面
+                    }
 
                 } catch (error) {
                     console.error("❌ 登录失败", error);
