--- a/seller.html
+++ b/seller.html
@@ -68,6 +68,7 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
+            position: relative;
         }
 
         .product-item img {
@@ -87,7 +88,7 @@
             border-radius: 5px;
         }
 
-        /* 编辑 & 添加弹出框 */
+        /* 弹出框 */
         .modal {
             display: none;
             position: fixed;
@@ -154,10 +155,23 @@
         </div>
     </div>
 
+    <!-- 编辑商品弹出框 -->
+    <div id="edit-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn" id="close-edit-modal">&times;</span>
+            <h2>编辑商品</h2>
+            <input type="hidden" id="edit-product-id">
+            <input type="text" id="edit-image" placeholder="商品图片URL">
+            <input type="text" id="edit-name" placeholder="商品名称">
+            <input type="number" id="edit-price" placeholder="商品价格">
+            <button class="save-btn" id="save-edit-product">保存</button>
+        </div>
+    </div>
+
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-        import { getFirestore, collection, getDocs, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { getFirestore, collection, getDocs, addDoc, updateDoc, doc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyCh7tgqEZb1zLICy6trriTCMJlXEe0x6hM",
@@ -174,18 +188,6 @@
 
         document.addEventListener("DOMContentLoaded", async () => {
             const productList = document.getElementById("product-list");
-            const addModal = document.getElementById("add-modal");
-            const closeAddModal = document.getElementById("close-add-modal");
-            const addProductBtn = document.getElementById("add-product-btn");
-            const saveAddProductBtn = document.getElementById("save-add-product");
-
-            onAuthStateChanged(auth, async (user) => {
-                if (!user) {
-                    window.location.href = "login.html";
-                } else {
-                    loadProducts();
-                }
-            });
 
             async function loadProducts() {
                 productList.innerHTML = "<p>加载中...</p>";
@@ -194,38 +196,45 @@
 
                 querySnapshot.forEach((doc) => {
                     const product = doc.data();
+                    const productId = doc.id;
+
                     const item = document.createElement("div");
                     item.classList.add("product-item");
                     item.innerHTML = `
-                        <img src="${product.image || 'default.jpg'}" alt="${product.name}">
+                        <img src="${product.image}" alt="${product.name}">
                         <h3>${product.name}</h3>
                         <p>价格: ￥${product.price}</p>
+                        <button class="edit-btn" data-id="${productId}">编辑</button>
                     `;
+
+                    item.querySelector(".edit-btn").addEventListener("click", () => openEditModal(productId, product));
                     productList.appendChild(item);
                 });
             }
 
-            addProductBtn.addEventListener("click", () => {
-                addModal.style.display = "block";
-            });
+            async function openEditModal(id, product) {
+                document.getElementById("edit-product-id").value = id;
+                document.getElementById("edit-image").value = product.image;
+                document.getElementById("edit-name").value = product.name;
+                document.getElementById("edit-price").value = product.price;
+                document.getElementById("edit-modal").style.display = "block";
+            }
 
-            closeAddModal.addEventListener("click", () => {
-                addModal.style.display = "none";
-            });
-
-            saveAddProductBtn.addEventListener("click", async () => {
-                const image = document.getElementById("add-image").value;
-                const name = document.getElementById("add-name").value;
-                const price = document.getElementById("add-price").value;
-
-                await addDoc(collection(db, "products"), { image, name, price });
-                addModal.style.display = "none";
-                loadProducts();
+            document.getElementById("manage-orders").addEventListener("click", () => {
+                window.location.href = "orders.html";
             });
 
             document.getElementById("logout-btn").addEventListener("click", async () => {
                 await signOut(auth);
                 window.location.href = "login.html";
+            });
+
+            onAuthStateChanged(auth, async (user) => {
+                if (!user) {
+                    window.location.href = "login.html";
+                } else {
+                    loadProducts();
+                }
             });
         });
     </script>
